# TARGET

./: Cargo.toml  LICENSE  README.md  tauri.conf.json  tauri.conf.json.save
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
frontend/: index.html  script.js  style.css
src/: crypto.rs  lib.rs  main.rs  network.rs  protocol.rs  storage.rs
